<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_baseline_keyboard_backspace_40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_baseline_search_24"
            android:padding="7dp"
            android:maxLength="20"
            android:background="@drawable/edit_text"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".20" />

        <ImageView
            android:id="@+id/image_header"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/photo_header"
            app:layout_constraintBottom_toBottomOf="@id/guide_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/photo_profile"
            app:layout_constraintBottom_toBottomOf="@id/guide_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guide_line" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_notifications_none_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_line" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_margin_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="21dp" />

        <LinearLayout
            android:id="@+id/linlay_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/gl_margin_left"
            app:layout_constraintTop_toBottomOf="@id/image_profile">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_name"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:text="@string/text_number" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:ellipsize="none"
            android:text="@string/text_description"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl_margin_left"
            app:layout_constraintTop_toBottomOf="@id/linlay_name" />

        <TextView
            android:id="@+id/tv_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tags"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/gl_margin_left"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <TextView
            android:id="@+id/tv_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_job"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/gl_margin_left"
            app:layout_constraintTop_toBottomOf="@id/tv_tags" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_address"
            app:layout_constraintStart_toStartOf="@id/gl_margin_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_job" />

        <LinearLayout
            android:id="@+id/followers_and_connections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/gl_margin_left"
            app:layout_constraintTop_toBottomOf="@id/tv_address">

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_followers"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/text_follower" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/text_total_connections"
                android:textColor="@color/linkedin"
                android:textStyle="bold" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/people_one"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/people_one"
            app:layout_constraintStart_toStartOf="@id/gl_margin_left"
            app:layout_constraintTop_toBottomOf="@id/followers_and_connections" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/people_two"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/people_two"
            app:layout_constraintEnd_toEndOf="@id/people_one"
            app:layout_constraintStart_toEndOf="@id/people_one"
            app:layout_constraintTop_toTopOf="@id/people_one" />

        <TextView
            android:id="@+id/tv_connections"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/text_mutual_connections"
            app:layout_constraintBottom_toBottomOf="@id/people_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/people_two"
            app:layout_constraintTop_toTopOf="@id/people_two" />

        <Button
            android:id="@+id/btn_message"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/linkedin"
            android:background="@drawable/radius_50"
            android:text="@string/text_message"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19dp"
            app:layout_constraintEnd_toStartOf="@id/btn_more"
            app:layout_constraintStart_toStartOf="@id/gl_margin_left"
            app:layout_constraintTop_toBottomOf="@id/tv_connections" />

        <ImageButton
            android:id="@+id/btn_more"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/border"
            android:src="@drawable/ic_baseline_more_horiz_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_connections" />


        <LinearLayout
            android:id="@+id/job_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/grey_round_corner_border"
            android:backgroundTint="@color/abu"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl_margin_left"
            app:layout_constraintTop_toBottomOf="@id/btn_message">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_hiring" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_desc_hiring"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_job"
                android:textColor="@color/linkedin"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:id="@+id/horizontal_line"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/abu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/job_view" />

        <TextView
            android:id="@+id/tv_highlights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_highlights"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/gl_margin_left"
            app:layout_constraintTop_toBottomOf="@id/horizontal_line" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/binar_academy"
            app:layout_constraintStart_toStartOf="@id/gl_margin_left"
            app:layout_constraintTop_toBottomOf="@id/tv_highlights" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="15dp"
            android:text="@string/text_title_binar"
            android:textStyle="bold"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/logo"
            app:layout_constraintTop_toTopOf="@id/logo" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/text_desc_binar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <Button
            android:id="@+id/btn_binar"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:text="@string/text_message"
            android:textColor="@color/grey"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="@id/tv_desc"
            app:layout_constraintTop_toBottomOf="@id/tv_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>